--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,7 @@
 * {
     -webkit-transform: translate3d(0,0,0);
     -webkit-transform: translateZ(0);
+    -webkit-backface-visibility: hidden;
 }
 html {
     color: #222;
