--- a/css/main.css
+++ b/css/main.css
@@ -120,8 +120,8 @@ body {
 #game {
 overflow: hidden;
 background: #000;
-height: 640px;
-width: 1136px;
+height: 400px;
+width: 640px;
 margin: 0 auto;
 position: relative;
 font-family: 'VT323', cursive;
@@ -134,7 +134,7 @@ font-family: 'VT323', cursive;
     left: 0;
 }
 * {
-    background-repeat: no-repeat;
+    background-repeat: no-repeat !important;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
 }
@@ -146,6 +146,7 @@ a {
     position: absolute;
     -webkit-tap-highlight-color: rgba(0,0,0,0);
     -webkit-touch-callout: none;
+    background-repeat: no-repeat;
 }
 span {
     position: absolute;
@@ -158,18 +159,37 @@ left: 0;
 width: 100%;
 padding: 1em;
 height: 100%;
-color: #fff;
+color: #91f256;
 font-size: 2em;
 background: #000;
 cursor: pointer;
 display: none;
 padding-top: 2em;
-opacity: .7;
+opacity: 1;
+}
+#text.say:after {
+    content: "Continue";
+    display: block;
+    background: #002ca5;
+    width: 7em;
+    text-align: center;
+    padding: .25em 1em;
+    border-radius: 0px;
+    margin: 1em auto;
 }
 #text span {
     display: block;
     cursor: pointer;
     position: static;
+}
+#text span:before {
+    content: "-";
+}
+#text span:hover:before {
+    content: "[";
+}
+#text span:hover:after {
+    content: "]";
 }
 #inventory {
     z-index: 9999;
@@ -186,7 +206,7 @@ opacity: .7;
     margin-left: -.5em;
     margin-top: -.5em;
     color: #fff;
-    text-shadow: 0px 0px 5px #000;   
+    text-shadow: 0px 0px 5px #000;
 }
 #sprite.glowing:after {
     display: none;
@@ -208,14 +228,14 @@ opacity: .7;
 #inventory {
     position: absolute;
     bottom: 0;
-    height: 88px;
-    width: 100%;
+    height: 44px;
+    width: auto;
     display: none;
 }
 #inventory div {
-    height: 80px;
-    width: 80px;
-    border: 4px solid #fff;
+    height: 40px;
+    width: 40px;
+    border: 2px solid #fff;
     float: left;
     color: #fff;
     cursor: pointer;
@@ -224,18 +244,19 @@ opacity: .7;
     position: relative;
 }
 #inventory .active {
-    background-color: #c00;
+    background-color: #55ffff;
 }
 .btn {
     width: 500px;
-    height: 80px;
+    height: 60px;
     left: 50%;
     margin-left: -250px;
     border: 4px solid #fff;
     color: #fff;
     text-align: center;
-    padding: .5em 0;
+    padding: .1em 0;
     font-size: 2em;
+    background: #000;
 }
 #inventory .target {
     display: none;
@@ -247,14 +268,14 @@ opacity: .7;
     right: 0;
     height: 25px;
     width: 25px;
-    background: #000 url(../img/eye.png?v=2) center center;
+    background: #000 url(../img/icons/eye.png?v=2) center center;
     border-top: 4px solid #fff;
     border-left: 4px solid #fff;
     background-size: contain;
     z-index: 9999;
 }
 #inventory .has:hover .target {
-    display: block;
+    /*display: block;*/ /* for using objects on objects */
 }
 #inventory .active:hover .target {
     display: none;
